--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "document",
     "vector"
   ],
-  "version": "0.8.3",
+  "version": "0.8.3-R2",
   "homepage": "http://pdfkit.org/",
   "author": {
     "name": "Devon Govett",
